--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 	<title>知农后台管理系统</title>
-<link rel="stylesheet" href="admin/css/normalize.css">
+	<link rel="stylesheet" href="admin/css/normalize.css">
 	<script src="public/js/jquery.js"></script>
+	<script src="public/layer-v3.1.1/layer.js"></script>
 <style type="text/css">
 .btn { 
 	display: inline-block; 
@@ -107,8 +108,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 <div class="login">
 	<h1>Login</h1>
 	<form method="post">
-		<input type="text" name="loginName" placeholder="用户名" required="required" />
-		<input type="password" name="loginPwd" placeholder="密码" required="required" />
+		<input type="text" name="username" placeholder="用户名" required="required" />
+		<input type="password" name="password" placeholder="密码" required="required" />
 		<button type="submit" class="btn btn-primary btn-block btn-large">登录</button>
 	</form>
 </div>
@@ -118,8 +119,9 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 			//防止表单以老式方法提交
 			e.preventDefault();
 			//表单数据序列化
-		var formData = $(this).serialize();
+			var formData = $(this).serialize();
 			//当接口返回的数据类型与dataType不一致时，error模块也将会执行,即使请求成功
+			var ii = layer.load();
 			$.ajax({
 				url:"admin/login",
 				type:"POST",
@@ -127,7 +129,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 				data:formData,
 				success:function (data,status,jqXHR) {
 				    if(!data.success){
-				        alert(data.msg);
+				        layer.close(ii);
+				        layer.msg(data.msg);
 					}else{
                         window.location.href="admin/index";
 					}
