fix some problem

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 	<title>知农后台管理系统</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<script src="../public/js/jquery.js"></script>
-	<script src="../public/layer-v3.1.1/layer.js"></script>
+	<link rel="stylesheet" href="admin/css/normalize.css">
+	<script src="public/js/jquery.js"></script>
+	<script src="public/layer-v3.1.1/layer.js"></script>
 <style type="text/css">
 .btn { 
 	display: inline-block; 
